mds: check export pin during replay

Fixes: http://tracker.ceph.com/issues/20039

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>