src/mds/CInode.h
@@ -1068,9 +1068,8 @@ public:
     projected_parent.pop_front();
   }
 
-private:
-  void maybe_export_pin(bool update=false);
 public:
+  void maybe_export_pin(bool update=false);
   void set_export_pin(mds_rank_t rank);
   mds_rank_t get_export_pin(bool inherit=true) const;
   bool is_exportable(mds_rank_t dest) const;
